# qtrscpp

./: CMakeLists.txt  LICENSE  README.md
gui/: CMakeLists.txt  main.cpp  main.qml
rust/: CMakeLists.txt  Cargo.toml
rust/src/: lib.rs
